photobiologyInOut Ver 0.2.0
===========================

Edited read_licor_prn_files() drastically. The new version is functionally equivalent
but formal arguments have changed. In addtion it is now implemented by calling
read_licor_prn_file().

New functions read_licor_prn_file() and read_tuv_file() returning source.spct objects.

photobiologyInOut Ver 0.1.3
===========================

Added function read.xlsx() for reading data from Excel workbook files saved as .xlsx (zipped XML format). 

photobiologyInOut Ver 0.1.2
===========================

Added parameter unit.out and cleaned code.

photobiologyInOut Ver 0.1.0
===========================

First version containing only one function for importing data measured with a LI-COR LI-1800 spectroradiometer from .PRN text files produced by the PC1800 MS-DOS program from LI-COR.