@@ -4,9 +4,9 @@
 ##' to extract the header and spectral data. The time field is converted to a date.
 ##' 
 ##' @usage read_tuv_file(file = "usrout.txt", 
-##'                      ange = NULL, low.limit = NULL, high.limit = NULL, 
-##'                             unit.out = "energy", 
-##'                             date = lubridate::today())
+##'                      range = NULL, low.limit = NULL, high.limit = NULL, 
+##'                      unit.out = "energy", 
+##'                      date = lubridate::today())
 ##'                             
 ##' @param file character string
 ##' @param range a numeric vector of length two, or any other object for which function range() will return two
@@ -42,7 +42,7 @@ read_tuv_file <- function(file = "usrout.txt",
                           unit.out="energy", 
                           date = lubridate::today()) {
   file_header <- scan(file=file, nlines=5, what="character", sep = "\n" )
-  hours <- scan(text = sub(pattern = "wc, nm", replacement = "", x = file_header[4], fixed=TRUE), what = "double")
+  hours <- scan(text = sub(pattern = "wc, nm", replacement = "", x = file_header[4], fixed=TRUE))
   num.spectra <- length(hours)
   
   minutes <- trunc((hours - trunc(hours)) * 60)
@@ -52,20 +52,33 @@ read_tuv_file <- function(file = "usrout.txt",
   lubridate::minute(date) <- trunc(minutes)
   lubridate::second(date) <- trunc(seconds)
   
-  angles <- scan(text = sub(pattern = "sza = ", replacement = "", x = file_header[5], fixed=TRUE), what = "double")
+  angles <- scan(text = sub(pattern = "sza = ", replacement = "", x = file_header[5], fixed=TRUE))
   
   wide.dt <- read.table(file=file, header=FALSE, skip=5, col.names=c("w.length", LETTERS[1:num.spectra]))
-  wl.length <- length()
-  setDT(wide.dt)
+  
+  setGenericSpct(wide.dt)
+  wide.dt <- trim_spct(wide.dt, range = range, low.limit = low.limit, high.limit = high.limit)
+  
   wl.length <- wide.dt[ , length(w.length)]
+
   out.spct <- melt(wide.dt, id.vars = "w.length", value.name = "s.e.irrad", variable.name = "spectrum")
+  setSourceSpct(out.spct, time.unit = "second")
   setkey(out.spct, spectrum)
   out.spct[levels(spectrum), angle := rep(angles, rep(wl.length, num.spectra))]
-  out.spct[levels(spectrum), date := rep(times, rep(wl.length, num.spectra))]
+  out.spct[levels(spectrum), date := rep(as.POSIXct(date), rep(wl.length, num.spectra))]
   
-  setSourceSpct(out.spct, time.unit = "second")
+  if (unit.out=="energy") {
+    q2e(out.spct, action = "replace", byref = TRUE)
+  } else if (unit.out=="photon") {
+    e2q(out.spct, action = "replace", byref = TRUE)
+  } else if (unit.out=="both") {
+    q2e(out.spct, action = "add", byref = TRUE)
+    e2q(out.spct, action = "add", byref = TRUE)
+  } else {
+    warning("Unrecognized argument to 'unit.out' ", unit.out, " keeping data as is.")
+  }
+  
   setattr(out.spct, "comment", paste("TUV:", paste(file_header, collapse = "\n"), sep = "\n"))
-  trim_spct(out.spct, low.limit=low.limit, high.limit=high.limit)
   return(out.spct)
 }
 
